envs/dev/platform/k8s/policies/baseline/hostpath-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hostpath-test
  namespace: demo-app
  labels:
    app: test
    owner: test
    env: test
spec:
  containers:
    - name: test
      image: 910321623036.dkr.ecr.ap-south-1.amazonaws.com/nginx:latest
      volumeMounts:
        - name: host
          mountPath: /host
      resources:
        requests:
          cpu: "50m"
          memory: "64Mi"
        limits:
          cpu: "100m"
          memory: "128Mi"
  volumes:
    - name: host
      hostPath:
        path: /
        type: Directory
